--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="/ressources/icons/brands/logo.svg">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/components.css">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Responsive side bar</title>
     </head>
     <body>
