Updating the reset file

--- a/index.html
+++ b/index.html
@@ -22,38 +22,38 @@
                 <ul class="nav-link-container">
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of search bar ">
+                            <img src="/ressources/icons/search.svg" alt="An icon of search bar ">
                             <p>Buscar</p>
                         </a>
                     </li>
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of menu">
+                            <img src="/ressources/icons/grid.svg" alt="An icon of menu">
                             <p> Dashboard</p>
                         </a>
                     </li>
 
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of pets">
+                            <img src="/ressources/icons/pet.svg" alt="An icon of pets">
                             <p>Pets</p>
                         </a>
                     </li>
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of clients">
+                            <img src="/ressources/icons/user.svg" alt="An icon of clients">
                             <p>Clientes</p>
                         </a>
                     </li>
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of clothes">
+                            <img src="/ressources/icons/user-md.svg" alt="An icon of clothes">
                             <p>Vets</p>
                         </a>
                     </li>
                     <li class="nav-link-item">
                         <a href="#">
-                            <img src="/ressources/icons/" alt="An icon of settings">
+                            <img src="/ressources/icons/settings.svg" alt="An icon of settings">
                             <p>Ajustes</p>
                         </a>
                     </li>
