--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul class="nav-link-container">
                         <li class="nav-link-item">
-                            <a href="#" class="nav-link" >
+                            <a href="#" class="nav-link active" >
                                 <img src="/ressources/icons/search.svg" alt="An icon of search bar ">
                                 <p>Buscar</p>
                                 
