End of the basic layout of the code
This is the simple design of the concept without interactions

--- a/index.html
+++ b/index.html
@@ -72,15 +72,18 @@
             <div class="navbar-footer">
                 
                 <div class="profile">
-                    <img src="/ressources/images/avatar.png" alt="A profile image">
+                    <picture>
+                        <img src="/ressources/images/avatar.png" alt="A profile image"></picture>
 
                     <div class="profile-informations">
-                        <p class="name">Eleanor Pena</p>
-                        <p class="job">Veterinária</p>
+                        <p class="profile-name">Eleanor Pena</p>
+                        <p class="profile-job">Veterinária</p>
                     </div>
                 </div>
 
-                <img src="/ressources/icons/log-out.svg" alt="A logout button">
+                <a href="#" class="logout-icon">
+                    <img src="/ressources/icons/log-out.svg" alt="A logout button">
+                </a>
             </div>
 
         </aside>
