--- a/index.html
+++ b/index.html
@@ -92,5 +92,11 @@
             <h1>Dashboard</h1>
         </main>
         
+
+        <!--Adding javascript files-->
+
+        <script src="/js/config.js" ></script>
+        <script src="/js/main.js" ></script>
+
     </body>
 </html>
