Cleaning the CSS CODE

--- a/index.html
+++ b/index.html
@@ -29,44 +29,43 @@
                         <li class="nav-link-item">
                             <a href="#" class="nav-link active" >
                                 <img src="/ressources/icons/search.svg" alt="An icon of search bar ">
-                                <p>Buscar</p>
+                                <p class="nav-link-description" >Buscar</p>
                             </a>
                         </li>
                         <li class="nav-link-item">
                             <a href="#" class="nav-link" >
                                 <img src="/ressources/icons/grid.svg" alt="An icon of menu">
-                                <p> Dashboard</p>
+                                <p class="nav-link-description" > Dashboard</p>
                             </a>
                         </li>
     
                         <li class="nav-link-item">
                             <a href="#" class="nav-link" >
                                 <img src="/ressources/icons/pet.svg" alt="An icon of pets">
-                                <p>Pets</p>
+                                <p class="nav-link-description" >Pets</p>
                             </a>
                         </li>
                         <li class="nav-link-item">
                             <a href="#" class="nav-link" >
                                 <img src="/ressources/icons/user.svg" alt="An icon of clients">
-                                <p>Clientes</p>
+                                <p class="nav-link-description" >Clientes</p>
                             </a>
                         </li>
                         <li class="nav-link-item">
                             <a href="#" class="nav-link" >
                                 <img src="/ressources/icons/user-md.svg" alt="An icon of clothes">
-                                <p>Vets</p>
+                                <p class="nav-link-description" >Vets</p>
                             </a>
                         </li>
                         <li class="nav-link-item">
                             <a href="#" class="nav-link" >
                                 <img src="/ressources/icons/settings.svg" alt="An icon of settings">
-                                <p>Ajustes</p>
+                                <p class="nav-link-description" >Ajustes</p>
                             </a>
                         </li>
                     </ul>
                 </nav> 
             </div>
-
 
             <div class="navbar-footer">
                 
