Adding a card to get the challenge
I added a simple HTML Card to get the template and practice!

--- a/index.html
+++ b/index.html
@@ -91,8 +91,19 @@
             <div class="challenge-informations">
                 <h2>Dashboard</h2>
             
-                <div class="image-container">
-                    <img src="/ressources/images/project.png" alt="The project image">
+                <div class="challenge-container">
+                    <div class="image-container">
+                        <img src="/ressources/images/project.png" alt="The project image">
+                    </div>
+                   
+                    <div class="project-download">
+                        <img src="/ressources/icons/figma.svg" alt="The link to the figma template">
+                        Get the challenge template Here
+
+                        <a href="https://www.figma.com/file/DoKsrozMr1YNHeheZ5kJhz/Sidebar-Responsive-%F0%9F%93%8A-(Community)?type=design&node-id=653%3A2&mode=design&t=o8e1R6mE0KzwtUDn-1">
+                            <button type="button" data-role="get-template" > Template</button>
+                        </a>
+                    </div>
                 </div>
             </div>
 
