Updating the responsive message

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         </main>
         
 
+        <div class="prevent-card">
+            <picture>
+                <img src="/ressources/images/non-responsive.jpg" alt="">
+            </picture>
+            <p class="prevent-text"> Non responsive ! <br> Come back later...</p>
+        </div>
+
         <!--Adding javascript files-->
 
         <script src="/js/config.js" ></script>
